refactor(server): enhance todo API and initial setup
This commit significantly refactors the backend server for the todo application, improving the robustness and usability of the API. Key enhancements include making the todo data more realistic, handling numerical conversions for IDs, standardizing API responses with proper status codes and messages, and enabling Cross-Origin Resource Sharing (CORS) for future frontend integration. The project now also properly loads environment variables during development.

The changes include:
- Update initial todo data in `server/controllers/todoControllers.js` to include `isDone` status and more descriptive tasks.
- Refine `getTodo` function in `server/controllers/todoControllers.js` to explicitly convert `todoId` to a number and use strict equality (`===`).
- Modify `addTodo` function in `server/controllers/todoControllers.js` to extract `task` using destructuring, generate a unique `id` for new todos, set `isDone` to `false` by default, and return a success message.
- Overhaul `updateTodo` function in `server/controllers/todoControllers.js` to correctly parse `todoId` as a number, handle partial updates for `task` and `isDone` fields, and return appropriate success or not-found responses.
- Improve `deleteTodo` function in `server/controllers/todoControllers.js` to parse `todoId` as a number and return a not-found response if the todo doesn't exist.
- Add `cors` package as a dependency in `server/package.json` and `server/package-lock.json`.
- Update the `dev` script in `server/package.json` to include `--env-file=../.env` for loading environment variables.
- Import and use `cors` middleware in `server/server.js` with `origin: "http://localhost:3000"` to allow frontend connections.
- Add `express.json()` middleware in `server/server.js` to parse JSON request bodies.
- Change the base API path from `/api/todo` to `/api/todos` in `server/server.js` for better RESTful consistency.

--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch server"
+    "dev": "node --env-file=../.env --watch server"
   },
   "author": "Rahil Bin Mushfiq",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
